--- a/source/index.html
+++ b/source/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Описание проекта">
-    <title>Фитнес Центр</title>
+    <meta name="description" content="Ремонт телефонов и планшетов в Твери">
+    <title>Ремонт телефонов и планшетов в Твери</title>
 
     <!-- styles -->
     <link rel="stylesheet" href="css/style.min.css">
@@ -33,20 +33,32 @@
   <body>
     <div class="wrapper">
       <header class="header">
-        <div class="container">
-          <h1>ЕГОРИН.РФ</h1>
-          <nav>
-            <ul>
-              <li>обо мне</li>
-              <li>отзывы</li>
-              <li>контакты</li>
-              <li>договор-оферта</li>
-            </ul>
-          </nav>
-        </div>
+        <a class="header__logo" href="#">logo</a>
+        <nav class="header__nav nav">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a href="#" class="nav__link">Услуги</a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">О нас</a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">Примеры работ</a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">Отзывы</a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+        <button class="header__call btn" type="button">Позвонить</button>
       </header>
-      <main>
-
+      <main class="main">
+        <div class="container">
+          3444
+        </div>
       </main>
       <footer class="footer">
         <div class="container">
