--- a/source/index.html
+++ b/source/index.html
@@ -56,6 +56,11 @@
         <button class="header__call btn" type="button">Позвонить</button>
       </header>
       <main class="main">
+        <section class="intro">
+          <h1 class="intro__title">Ремонт телефонов и планшетов в Твери</h1>
+          <p class="intro__address">ТРЦ Рубин 2 и ТРЦ Рио</p>
+          <a class="intro__request btn">Отправить заявку</a>
+        </section>
         <div class="container">
           3444
         </div>
