--- a/source/index.html
+++ b/source/index.html
@@ -37,7 +37,7 @@
         <nav class="header__nav nav">
           <ul class="nav__list">
             <li class="nav__item">
-              <a href="#" class="nav__link">Услуги</a>
+              <a href="#services" class="nav__link">Услуги</a>
             </li>
             <li class="nav__item">
               <a href="#" class="nav__link">О нас</a>
@@ -59,11 +59,89 @@
         <section class="intro">
           <h1 class="intro__title">Ремонт телефонов и планшетов в Твери</h1>
           <p class="intro__address">ТРЦ Рубин 2 и ТРЦ Рио</p>
-          <a class="intro__request btn">Отправить заявку</a>
+          <a class="intro__request btn btn--big">Отправить заявку</a>
         </section>
-        <div class="container">
-          3444
-        </div>
+        <section class="services" id="services">
+          <div class="container">
+            <div class="services__contents section">
+              <h2 class="services__title">Наши услуги</h2>
+              <ul class="services__list">
+                <li class="services__item">
+                  замена комплектующих
+                </li>
+                <li class="services__item">
+                  паяльные работы
+                </li>
+                <li class="services__item">
+                  прошивка, установка ПО
+                </li>
+                <li class="services__item">
+                  выезд мастера в черте города
+                </li>
+              </ul>
+              <h3 class="services__key-points-title">Почему мы?</h3>
+              <ul class="services__key-points-list">
+                <li class="services__key-points-item">
+                  бесплатная диагностика (без обязательных платежей?)
+                </li>
+                <li class="services__key-points-item">
+                  ремонт в день обращения
+                </li>
+                <li class="services__key-points-item">
+                  гарантия (сколько?)
+                </li>
+                <li class="services__key-points-item">
+                  низкие цены
+                </li>
+              </ul>  
+            </div>
+          </div>  
+        </section>
+        <section class="about-us">
+          <div class="container">
+            <div class="section">
+              <h2 class="about-us__title">О нас</h2>
+              Уже 5 лет
+              ремонтируем технику
+
+              Более 3000 человек
+              обратились к нам с 2015 года
+
+              Из них
+              70% с разбитыми экранами
+            </div>
+          </div>
+        </section>
+        <section class="works">
+          <div class="container">
+            <div class="section">
+              <h2 class="works__title">Примеры работ</h2>
+            </div>
+          </div>
+        </section>
+        <section class="works">
+          <div class="container">
+            <div class="section">
+              <h2 class="works__title">Отзывы клиентов</h2>
+            </div>
+          </div>
+        </section>
+        <section class="request">
+          <div class="container">
+            <div class="section">
+              <h2 class="request__title">Оставьте заявку</h2>
+              <form action="">
+                <input type="number" name="">
+                <input type="text" name="">
+                <textarea name="" cols="30" rows="10"></textarea>
+                <button type="submit"></button>
+              </form>
+            </div>
+          </div>
+        </section>
+        <section class="contacts">
+          <h2 class="request__title">Наши контакты</h2>
+        </section>
       </main>
       <footer class="footer">
         <div class="container">
