--- a/source/index.html
+++ b/source/index.html
@@ -85,52 +85,44 @@
               </ul>
               <h3 class="services__key-points-title">Почему мы?</h3>
               <ul class="services__key-points-list">
-                <li class="services__key-points-item">
-                  <div class="services__key-points-cover">
-                    <p>
-                      Диагностика бесплатна при последующем ремонте у нас. 
-                      Так же проводим предпродажную диагностику, 
-                      даём дополнительное мнение к заключениям других сервисов. 
-                      Проводим диагностику любой мобильной техники.
-                    </p>
+                <li class="services__key-points-item" tabindex="0">
+                  <div class="services__key-points-cover no-scrollbar">
+                      <p>Диагностика бесплатна при последующем ремонте у нас.</p>
+                      <p>Так же проводим предпродажную диагностику,
+                      даём дополнительное мнение к заключениям других сервисов.</p>
+                      <p>Проводим диагностику любой мобильной техники.</p>
                   </div>
                   <div class="services__key-points-content">
                     <p>Бесплатная диагностика</p>
                   </div>
                 </li>
-                <li class="services__key-points-item">
-                  <div class="services__key-points-cover">
-                    <p>
-                      Большое количество запчастей имеется в наличии.
-                      95% обращений обрабатываем в день обращения.
-                      Буквально через несколько часов после обращения можно забрать готовый после ремонта телефон!
-                    </p>
+                <li class="services__key-points-item" tabindex="0">
+                  <div class="services__key-points-cover no-scrollbar">
+                      <p>Большое количество запчастей имеется в наличии.</p>
+                      <p>95% обращений обрабатываем в день обращения.</p>
+                      <p>Буквально через несколько часов после обращения можно забрать готовый после ремонта телефон!</p>
                   </div>
                   <div class="services__key-points-content">
                     <p>Ремонт в день обращения</p>
                   </div>
                 </li>
-                <li class="services__key-points-item">
-                  <div class="services__key-points-cover">
-                    <p>
-                      Гарантия на все виды работ, которые мы производим.
-                      Срок гарантии зависит от вида работ.
-                      На основные виды работ даём гарантию от 1 до 6 месяцев.
-                      Гарантийные обязательства не распространяются на пост-ремонтные механические повреждения.
-                    </p>
+                <li class="services__key-points-item" tabindex="0">
+                  <div class="services__key-points-cover no-scrollbar">
+                      <p>Гарантия на все виды работ, которые мы производим.
+                      Срок гарантии зависит от вида работ.</p>
+                      <p>На основные виды работ даём гарантию от 1 до 6 месяцев.</p>
+                      <p>Гарантийные обязательства не распространяются на пост-ремонтные механические повреждения.</p>
                   </div>
                   <div class="services__key-points-content">
                     <p>Гарантия на все виды работ</p>
                   </div>                  
                 </li>
-                <li class="services__key-points-item">
-                  <div class="services__key-points-cover">
-                    <p>
-                      Диагностика бесплатна при последующем ремонте у нас. 
-                      Так же проводим предпродажную диагностику, 
-                      даём дополнительное мнение к заключениям других сервисов. 
-                      Проводим диагностику любой мобильной техники.
-                    </p>
+                <li class="services__key-points-item" tabindex="0">
+                  <div class="services__key-points-cover no-scrollbar">
+                      <p>Диагностика бесплатна при последующем ремонте у нас.</p>
+                      <p>Так же проводим предпродажную диагностику, 
+                      даём дополнительное мнение к заключениям других сервисов. </p>
+                      <p>Проводим диагностику любой мобильной техники.</p>
                   </div>
                   <div class="services__key-points-content">
                     <p>Низкие цены</p>
